# pymsgpack

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: ModuleCompileOptions.cmake  ModuleImport.cmake  PythonModuleImport.cmake
module/pymsgpack/: buildpkg.sh  creature.h  msgpack_fix32.cpp  msgpack_fix32.hpp  msgpack_loader.cpp  msgpack_loader.hpp  msgpack_util.h  player.cc  player.h  playerinfo.cc  playerinfo.h  pymsgpack.pkg  pymsgpack.py  pymsgpack.pybind11.cc
module/pymsgpackex/: buildpkg.bat  creature_attr_def.py.inl  data.msgpack.hpp  data.py.inl  dmos.h  dmsingleton.h  msgpack_fix32.cpp  msgpack_fix32.hpp  msgpack_help.hpp  msgpack_loader.cpp  msgpack_loader.hpp  msgpack_loader.inl  msgpack_variant.hpp  pymsgpack.py  pymsgpack.pybind11.cc  pymsgpack.pybind11.h  pymsgpackex.pkg  pymsgpackex.py  pymsgpackex.pybind11.cc  pymsgpackex.pybind11.h
module/pymsgpackex/export/: creature_attr_def.msgpack.cpp  creature_attr_def.msgpack.hpp  model.msgpack.cpp  model.msgpack.hpp
test/pymsgpack_test/: main.cpp
tools/python/: python.c
